--- a/client/website/index.html
+++ b/client/website/index.html
@@ -1,3 +1,5 @@
+[file name]: client/website/index.html
+[file content begin]
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -209,9 +211,9 @@
     </div>
 </div>
 
+    <script src="js/api-client.js"></script>
     <script src="js/bongo-cat.js"></script>
     <script src="js/app.js"></script>
-
-
 </body>
 </html>
+[file content end]
