--- a/client/website/search-results.html
+++ b/client/website/search-results.html
@@ -1,3 +1,5 @@
+[file name]: client/website/search-results.html
+[file content begin]
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -110,7 +112,9 @@
         </div>
     </footer>
 
+    <script src="js/api-client.js"></script>
     <script src="js/bongo-cat.js"></script>
     <script src="js/search-results.js"></script>
 </body>
 </html>
+[file content end]
